# fzr

./: .gitmodules  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml
fzr/: Cargo.toml  Makefile  unicode_variations.py  update-unicode
fzr-cli/: Cargo.toml
fzr-cli/src/: main.rs
fzr-cli/tests/: cli.rs  tui.rs  tui_tester.rs
fzr-lua/: Cargo.toml
fzr-lua/src/: lib.rs  lua.rs
fzr-lua/tests/: lua.rs  test.lua
fzr/src/: bits.rs  lib.rs  pattern.rs  unicode.rs
termios-patch/: Cargo.toml
termios-patch/src/: lib.rs
utf8_map/: Cargo.toml
utf8_map/src/: lib.rs
