[package]
name = "fzr-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bumpalo = "3.19.0"
clap = { version = "4.5.38", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
fzr = { path = "../fzr" }
ouroboros = "0.18.5"
rayon = "1.11.0"
tempfile = "3.23.0"
termwiz = "0.23.3"
